welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfMaxValue:7: error: ';' expected but integer literal found.
			I="-"1
                             ^